name:           tondo
version:        0.1
license:        GPL
license-file:   LICENSE
author:         dan corson <danl@alum.mit.edu>
synopsis:       <syn>
build-type:     Simple
build-depends:  FUtil, MonadRandom, base, containers, directory, fgl,
                filepath, haskell98, bytestring, derive, binary, lollog

executable:     versioned_map_merge_driver
main-is:        Data/Versioned/Map/MergeDriver.hs
hs-source-dirs: src
